--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,63 @@
-<div class="toolbar" role="banner">
+<!-- <router-outlet></router-outlet> -->
 
-  <span>&nbsp;&nbsp; Jitsi Angular</span>
-  <div class="spacer"></div>
-  <a aria-label="UltimateAkash on twitter" target="_blank" rel="noopener" href="https://twitter.com/_ultimateakash"
-      title="Twitter">
-      <svg id="twitter-logo" height="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
-          <rect width="400" height="400" fill="none" />
-          <path
-              d="M153.62,301.59c94.34,0,145.94-78.16,145.94-145.94,0-2.22,0-4.43-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.38,102.38,0,0,1-29.46,8.07,51.47,51.47,0,0,0,22.55-28.37,102.79,102.79,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.78A145.62,145.62,0,0,1,92.4,107.81a51.33,51.33,0,0,0,15.88,68.47A50.91,50.91,0,0,1,85,169.86c0,.21,0,.43,0,.65a51.31,51.31,0,0,0,41.15,50.28,51.21,51.21,0,0,1-23.16.88,51.35,51.35,0,0,0,47.92,35.62,102.92,102.92,0,0,1-63.7,22A104.41,104.41,0,0,1,75,278.55a145.21,145.21,0,0,0,78.62,23"
-              fill="#fff" />
-      </svg>
-  </a>
-</div>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-<div class="content" role="main">
-  <router-outlet></router-outlet>
-  <footer>
-      Love This Project?&nbsp;
-      <a href="https://github.com/angular/angular" target="_blank" rel="noopener"> Give our repo a star.
-          <div class="github-star-badge">
-              <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                  viewBox="0 0 24 24">
-                  <path d="M0 0h24v24H0z" fill="none" />
-                  <path
-                      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-                  </svg>
-              Star
-          </div>
-      </a>
-  </footer>
-</div>
+
+    <!--CABECERA DE LA WEB-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light " style="background-color: black">
+        <a class="navbar-brand" [routerLink]="['/']" style="cursor: pointer;">Auxiliaturas</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item" >
+                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal">Generate link</a>
+                  
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#roomModal" data-dismiss="modal">Save</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mr-2" [routerLink]="['/saved']" style="cursor: pointer;" >Saved</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mr-2" [routerLink]="['/room']" style="cursor: pointer;" >New Room</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mr-2" [routerLink]="['/myrooms']" style="cursor: pointer;">My rooms</a>
+                </li>
+            </ul>
+
+        </div>
+
+        <ul class="navbar-nav navbar-right ">
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Jose Merida
+        </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Setting</a>
+                    <a class="dropdown-item" href="#">Binnacle</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" style="cursor: pointer;">Log out</a>
+                </div>
+            </li>
+
+        </ul>
+
+    </nav>
+
+    <body>
+
+
+
+
+    </body>
+
+
+
+
+    <router-outlet></router-outlet>
