--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,20 +13,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" >
-                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal">Generate link</a>
+                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal">Estudiante</a>
                   
                 </li>
                 <li class="nav-item" >
-                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#roomModal" data-dismiss="modal">Save</a>
+                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#roomModal" data-dismiss="modal">Auxiliar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mr-2" [routerLink]="['/saved']" style="cursor: pointer;" >Saved</a>
+                    <a class="nav-link mr-2" [routerLink]="['/saved']" style="cursor: pointer;" >Mis Materias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mr-2" [routerLink]="['/room']" style="cursor: pointer;" >New Room</a>
+                    <a class="nav-link mr-2" [routerLink]="['/room']" style="cursor: pointer;" >Nueva Materia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mr-2" [routerLink]="['/myrooms']" style="cursor: pointer;">My rooms</a>
+                    <a class="nav-link mr-2" [routerLink]="['/myrooms']" style="cursor: pointer;">Mis reuniones</a>
                 </li>
             </ul>
 
