--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,12 +1,24 @@
-<div>
-    <video #videoElement
-        [style.width]="width+'px'"
-        [style.height]="height+'px'"
-        (loadedmetadata)="loadedMetaData()"
-        (play)="listenerPlay()"
-        *ngIf="stream"
-        [srcObject]="stream">
 
-    </video>
-</div>
-
+<div *ngIf="modelsReady">
+       <video #videoElement
+              [style.width]="width+'px'"
+              [style.height]="height+'px'"
+              (loadedmetadata)="loadedMetaData()"
+              (play)="listenerPlay()"
+              *ngIf="stream"
+              [srcObject]="stream">
+       </video>
+     </div>
+     <div *ngIf="!modelsReady">
+       Cargando modelos......
+     </div>
+     
+     
+     <!--- ******************* ZONE FILTERS ***************** -->
+     <!-- <div class="filters" *ngFor="let filter of filters">
+       <div class="filter-eye filter-question" *ngIf="filter.type === 'question'">
+         <span [innerHTML]="filter?.question"></span>
+       </div>
+       
+     </div>
+      -->
