#Styles_updated #New_Models_and_Services_Folders

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 
     <!--CABECERA DE LA WEB-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light " style="background-color: black">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark " style="background-color: black">
         <a class="navbar-brand" [routerLink]="['/']" style="cursor: pointer;">Auxiliaturas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
