--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -94,11 +94,11 @@
       </div>
       <div class="col col-lg-3">
         <h3 style="text-align: center">Online</h3>
-          <app-video-player
+          <!-- <app-video-player
           [width]=320
           [height]=270
           [stream]="currentStream">
-        </app-video-player>
+        </app-video-player> -->
       </div>
         
     </div>
