--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,21 +32,24 @@
 
         </div>
 
-        <ul class="navbar-nav navbar-right ">
+        <div *ngIf="status">
 
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Jose Merida
-        </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Setting</a>
-                    <a class="dropdown-item" href="#">Binnacle</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" style="cursor: pointer;">Log out</a>
-                </div>
-            </li>
-
-        </ul>
+            <ul class="navbar-nav navbar-right ">
+    
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{persona[1].nombre}} {{persona[2].apellidos}}
+            </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Setting</a>
+                        <a class="dropdown-item" href="#">Binnacle</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" style="cursor: pointer;" (click)="logout()">Log out</a>
+                    </div>
+                </li>
+    
+            </ul>
+        </div>
 
     </nav>
 
