--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" >
-                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal">Estudiante</a>
+                    <a class="nav-link mr-2" [routerLink]="['/login/1']" style="cursor: pointer;" data-toggle="modal" data-target="#exampleModal">Estudiante</a>
                   
                 </li>
                 <li class="nav-item" >
-                    <a class="nav-link mr-2" style="cursor: pointer;" data-toggle="modal" data-target="#roomModal" data-dismiss="modal">Auxiliar</a>
+                    <a class="nav-link mr-2" [routerLink]="['/login/2']" style="cursor: pointer;" data-toggle="modal" data-target="#roomModal" data-dismiss="modal">Auxiliar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mr-2" [routerLink]="['/saved']" style="cursor: pointer;" >Mis Materias</a>
