--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -81,7 +81,7 @@
               <div class="col-md-3 col-sm-6">
                    <div class="team-thumb">
                         <div class="team-image">
-                             <img src="https://bit.ly/3HnMO19" class="img-responsive" alt="">
+                             <img src="/assets/perfil/perfil.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
                              <h3>Mark Wilson</h3>
