--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -81,7 +81,7 @@
               <div class="col-md-3 col-sm-6">
                    <div class="team-thumb">
                         <div class="team-image">
-                             <img src="/assets/perfil/perfil.jpg" class="img-responsive" alt="">
+                             <img src="assets/perfil/perfil.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
                              <h3>Mark Wilson</h3>
@@ -94,7 +94,7 @@
               <div class="col-md-3 col-sm-6">
                    <div class="team-thumb">
                         <div class="team-image">
-                             <img src="https://bit.ly/3pAY3gx" class="img-responsive" alt="">
+                             <img src="https://static01.nyt.com/images/2019/11/22/world/26EvoES-1/merlin_164866155_107af746-78a1-4bfc-b2c8-c71367e9b257-articleLarge.jpg?quality=75&auto=webp&disable=upscale" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
                              <h3>Catherine</h3>
