--- a/src/app/components/test/test.component.html
+++ b/src/app/components/test/test.component.html
@@ -29,13 +29,23 @@
     </form>
       </div>
       <div class="col col-lg-3">
-        <h3 style="text-align: center ; color:red">Online</h3>
-          <!-- <app-video-player
-          [width]=320
-          [height]=270
-          [stream]="currentStream">
-        </app-video-player> -->
+      
+        <div class="container" >
+          <div class="row">
+              <div class="col-4"></div>
+              <div class="col-8" style="margin-top: 15%;">
+                  <div class="card text-white bg-dark mb-3" style="justify-content:center; align-items: center;">
+                      <div class="card-title mt-3" style="color: red;">Online</div>
+                      <video width="320" height="270" autoplay muted #videoContainer></video>
+                      <canvas style="position: absolute; margin-top:54px" #myCanvas></canvas>
+                  </div>
+              </div>
+              <div class="col-2"></div>
+          </div>
+      </div>          
+       
       </div>
+      
     </div>
   </div>
 
@@ -56,7 +66,8 @@
        <h5>{{messageScore}}</h5>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">Ir a materias</button>
+        <button type="button" class="btn btn-primary"  [routerLink]="['/mismaterias']" >Ir a materias</button>
+
       </div>
     </div>
   </div>
