--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,34 +1,62 @@
-<!-- <div class="alert alert-danger col-md-6 offset-md-3 mt-3" *ngIf="error">
+ <div class="alert alert-danger col-md-6 offset-md-3 mt-3" *ngIf="error">
     Login failed!!!, verify your credentials.
-</div> -->
+</div> 
+
+<div class="alert alert-success col-md-6 offset-md-3 mt-3" role="alert" *ngIf="registrado">
+    This is a success alert—check it out!
+  </div>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"/>
 
 <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
     <h1>Registrarse</h1>
     <div class="inset">
-        <p>
-            <label for="img_perfil">Foto Perfil</label>
-            <input type="file" class="form-control-file" accept="image/*" name="image" >
-
-           
-        </p>
-        <p>
+      
+             <label for="file-upload" class="custom-file-upload">
+                <i class="fa fa-cloud-upload"></i> Foto de perfil
+            </label>
+            <input id="file-upload" type="file" accept="image/*" name="image" (change)="selectImage($event)"/>
+        
+        
             <label for="correo">Correo</label>
-            <input type="text" name="correo" id="correo" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-            <!-- <small *ngIf="!correo.valid && correo.touched" class="invalid-feedback d-block">
+            <input type="text" name="correo" id="correo" #correo="ngModel" [(ngModel)]="user.correo"  required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+             <small *ngIf="!correo.valid && correo.touched" class="invalid-feedback d-block">
                 El correo no es válido.
-                </small> -->
-        </p>
-        <p>
+                </small> 
+       
+       
             <label for="contrasena">Contraseña</label>
-            <input type="password" name="contrasena" id="contrasena"  required>
-            <!-- <small *ngIf="!contrasena.valid && contrasena.touched" class="invalid-feedback d-block">
+            <input type="password" name="contrasena" id="contrasena"  #contrasena="ngModel" [(ngModel)]="user.contrasena" required>
+            <small *ngIf="!contrasena.valid && contrasena.touched" class="invalid-feedback d-block">
                 La contraseña no puede estar vacia.
-                </small> -->
-        </p>
+                </small>
+        
+            <label for="nombre">Nombre</label>
+            <input type="text" name="nombre" id="nombre"  #nombre="ngModel" [(ngModel)]="user.nombre" required>
+            <small *ngIf="!nombre.valid && nombre.touched" class="invalid-feedback d-block">
+                El nombre no puede estar vacio.
+                </small>
+      
+            <label for="apellidos">Apellidos</label>
+            <input type="text" name="apellidos" id="apellidos"  #apellidos="ngModel" [(ngModel)]="user.apellidos" required>
+            <small *ngIf="!apellidos.valid && apellidos.touched" class="invalid-feedback d-block">
+               El apellido no puede estar vacio.
+                </small>
+       
+            <label for="celular">Celular</label>
+            <input type="text" name="celular" id="celular" #celular="ngModel" [(ngModel)]="user.celular" >
+         
+      
+            <label for="direccion">Direccion</label>
+            <input type="text" name="direccion" id="direccion" #direccion="ngModel" [(ngModel)]="user.direccion" >
+           
+       
 
     </div>
     <p class="p-container">
         <button class="btn btn-info" type="submit" style="color: white; margin-right: 5px;" >Aceptar</button>
-        <button class="btn btn-danger ml-4" [routerLink]="['/']"> Cancelar</button>
+        <button class="btn btn-danger ml-4" [routerLink]="['/login/2']"> Cancelar</button>
     </p>
 </form>
+
+
+
