--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -43,22 +43,22 @@
 
                   <div class="col-md-4 col-sm-4">
                        <div class="feature-thumb">
-                            <div class="feature-title">Trending Courses</div>
-                            <div class="feature-parraf">Known is free education HTML Bootstrap Template. You can download and use this for your website.</div>
+                            <div class="feature-title">Programacion I</div>
+                            <div class="feature-parraf">La programación es fundamental para acrecentar el avance tecnológico dentro de las industrias que para llevar a cabo sus funciones necesitan de sitios y aplicaciones creadas a partir de los códigos.</div>
                        </div>
                   </div>
 
                   <div class="col-md-4 col-sm-4">
                        <div class="feature-thumb">
-                        <div class="feature-title">Trending Courses</div>
-                        <div class="feature-parraf">Known is free education HTML Bootstrap Template. You can download and use this for your website.</div>
+                        <div class="feature-title">Algebra</div>
+                        <div class="feature-parraf">El álgebra fortalece esas destrezas lógi- cas y les inicia en el pensamiento abstracto. Les hace entender que los símbolos como son la x y la y  se utilizan en lugar de números que varían y que pueden utilizarse.</div>
                        </div>
                   </div>
 
                   <div class="col-md-4 col-sm-4">
                        <div class="feature-thumb">
-                        <div class="feature-title">Trending Courses</div>
-                        <div class="feature-parraf">Known is free education HTML Bootstrap Template. You can download and use this for your website.</div>
+                        <div class="feature-title">Calculo I</div>
+                        <div class="feature-parraf">La importancia del Cálculo en el vida es muy extensa, ya que la ciencia y la tecnología modernas básicamente serían imposibles sin él. Las leyes naturales se expresan mediante ecuaciones que involucran funciones y sus derivadas.</div>
                        </div>
                   </div>
 
@@ -84,8 +84,8 @@
                              <img src="assets/perfil/perfil.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
-                             <h3>Mark Wilson</h3>
-                             <span>I love Teaching</span>
+                             <h3>Jose Merida</h3>
+                             <span>Me encanta enseñar, en mis tiempos libre lo hago de forma gratuita.</span>
                         </div>
                        
                    </div>
@@ -94,11 +94,11 @@
               <div class="col-md-3 col-sm-6">
                    <div class="team-thumb">
                         <div class="team-image">
-                             <img src="https://static01.nyt.com/images/2019/11/22/world/26EvoES-1/merlin_164866155_107af746-78a1-4bfc-b2c8-c71367e9b257-articleLarge.jpg?quality=75&auto=webp&disable=upscale" class="img-responsive" alt="">
+                             <img src="assets/perfil/perfil1.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
-                             <h3>Catherine</h3>
-                             <span>Education is the key!</span>
+                             <h3>Manuel S.</h3>
+                             <span>Nunca dejes de aprender, porque el conocimiento es poder.</span>
                         </div>
                       
                    </div>
@@ -107,11 +107,11 @@
               <div class="col-md-3 col-sm-6">
                    <div class="team-thumb">
                         <div class="team-image">
-                             <img src="https://bit.ly/315nTzJ" class="img-responsive" alt="">
+                             <img src="assets/perfil/perfil2.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
-                             <h3>Jessie Ca</h3>
-                             <span>I like Online Courses</span>
+                             <h3>Ronaldo R.</h3>
+                             <span>Soy ingeniero informatico y sistema de profesion, disfruto enseñar.</span>
                         </div>
                       
                    </div>
@@ -120,11 +120,11 @@
               <div class="col-md-3 col-sm-6">
                    <div class="team-thumb">
                         <div class="team-image">
-                             <img src="https://www.opinion.com.bo/media/opinion/images/2015/04/06/2015N157558.jpg" class="img-responsive" alt="">
+                             <img src="assets/perfil/perfil3.jpg" class="img-responsive" alt="">
                         </div>
                         <div class="team-info">
-                             <h3>Andrew Berti</h3>
-                             <span>Learning is fun</span>
+                             <h3>Eddy Escalante</h3>
+                             <span>Graduado por excelencia, activo en la enseñanza a estudiantes.</span>
                         </div>
                        
                    </div>
@@ -156,7 +156,7 @@
                             </div>
 
                         <div class="col-md-4 col-sm-12">
-                             <input type="submit" class="send-msj" name="send message" value="Send Message">
+                             <input type="submit" class="send-msj" name="send message" value="Enviar mensaje">
                         </div>
 
                    </form>
@@ -220,7 +220,7 @@
                     </li>
                     <li style="margin-bottom:20px">
                         <span class="fas fa-envelope" style="color: white;"></span>
-                        <span class="text" style="color: white;">miescuela@gmail.com</span>
+                        <span class="text" style="color: white;">yoestudiante@gmail.com</span>
                     </li>
 
                 </ul>
@@ -237,7 +237,7 @@
                 <h5 class="footer-title">Nosotros</h5>
 
                 <p style="text-align:justify; color:white">
-                    MiEscuela inició sus actividades escolares con adolescentes  entre 11-14 años del nivel intermedio; el 3 de marzo de 1979 bajo los auspicios de la MISIÓN SUECA EN BOLIVIA sin fines de lucro, como una alternativa educativa.
+                    YoEstudiante nacio con la iniciativa de un grupo de estudiantes de la Universidad Autonoma Gabriel Rene Moreno, con el fin de dar oportunidades a todo aquel que desee enseñar ya sea de forma gratuita o de paga.
                 </p>
 
             </div>
@@ -290,8 +290,8 @@
     <!-- Social buttons -->
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3" style="color:white">
-        © 2021 All rights reserved:
-        <a href="https://mdbootstrap.com/" style="color:white"> Miescuela.com</a>
+        © 2022 All rights reserved:
+        <a href="https://mdbootstrap.com/" style="color:white"> yoestudiante.com</a>
     </div>
     <!-- Copyright -->
 
