--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 
     <!--CABECERA DE LA WEB-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark " style="background-color: black">
+    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color:  rgba(0, 0, 0,0.1)">
         <a class="navbar-brand" [routerLink]="['/']" style="cursor: pointer;">Auxiliaturas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -19,15 +19,16 @@
                 <li class="nav-item" >
                     <a class="nav-link mr-2" [routerLink]="['/login/2']" style="cursor: pointer;">Auxiliar</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="status">
                     <a class="nav-link mr-2" [routerLink]="['/mismaterias']" style="cursor: pointer;" >Mis Materias</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="status">
                     <a class="nav-link mr-2"  style="cursor: pointer;" data-toggle="modal" data-target="#materiaModal" (click)="getAsignaturas()" >Nueva Materia</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link mr-2" [routerLink]="['/myrooms']" style="cursor: pointer;">Mis reuniones</a>
-                </li>
+                <li class="nav-item" *ngIf="status">
+                  <a class="nav-link mr-2" [routerLink]="['/mismaterias']" style="cursor: pointer;" >Mis clases</a>
+              </li>
+                
             </ul>
 
         </div>
