--- a/src/app/components/welcome/welcome.component.css
+++ b/src/app/components/welcome/welcome.component.css
@@ -23,6 +23,7 @@
     color: #ffffff;
     line-height: normal;
     margin: 10px 0;
+    text-align: center;
 }
 
 .feature-parraf{
@@ -122,7 +123,7 @@ margin-bottom: 50px;
     line-height: 1.42857143;
     color: #333;
     font-family: 'Nunito', sans-serif;
-    text-align: left;
+    text-align: justify;
     box-sizing: border-box;
     padding: 20px 30px;
 }
@@ -140,7 +141,7 @@ margin-bottom: 50px;
     border: 0;
     display: block;
     max-width: 100%;
-    height: auto;
+    height: 300px;
     width: 100%;
 }
 
